# ferrum

./: Cargo.toml  README.md
contracts/: sam.sol
src/: cfg.rs  compile.rs  detectors.rs  disasm.rs  lib.rs  lifter.rs  main.rs  opcodes.rs  output.rs  taint.rs
