[package]
name = "ferrum"
version = "0.2.0"
edition = "2021"
description = "EVM bytecode security analyzer — disassembles, lifts to IR, detects vulnerabilities"

[[bin]]
name = "ferrum"
path = "src/main.rs"

[dependencies]
clap    = { version = "4", features = ["derive"] }
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
